frontend/app/k8/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
