frontend/app/k8/base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  tls:
    - hosts:
        - app.dev.snuderls.eu
      secretName: frontend1-app-api-tls
  rules:
    - host: app.dev.snuderls.eu
      http:
        paths:
          - backend:
              serviceName: app
              servicePort: 80
